--- a/src/progress-bar.less
+++ b/src/progress-bar.less
@@ -1,3 +1,77 @@
 :host {
   display: block;
 }
+
+
+// Pull globals for individually compiled css files
+//@import '../globals/allGlobals';
+@padding: 1em;
+@color-primary-red: #ef272d;
+@color-light-grey: #ccc;
+@color-white: #fff;
+
+// Mixins
+
+.padding(@top: 0, @right: 0, @bottom: 0, @left: 0) {
+  padding-top: @top;
+  padding-right: @right;
+  padding-bottom: @bottom;
+  padding-left: @left;
+}
+
+.transition(@what: all, @length: .5s, @easing: ease-in-out) {
+  will-change: transition;
+  transition: @what @length @easing;
+}
+
+/* ==========================================================================
+    Progress -- Version: 0.2.1 - Compiled: #{timestamp()}
+   ========================================================================== */
+
+progress[value] {
+  position: relative;
+  width: 100%;
+  height: 1.5em;
+  .padding(@padding / 2, 0);
+  -webkit-appearance: none;
+  appearance: none;
+  .transition(height, .5s, ease);
+
+  &::-webkit-progress-bar {
+    background: @color-light-grey;
+  }
+
+  &::-webkit-progress-value {
+    position: relative;
+    background: @color-primary-red;
+    .transition(width, .5s, ease-in-out);
+
+    &:after {
+      position: absolute;
+      content: '';
+      width: .25em;
+      height: 100%;
+      right: 0;
+      background: @color-white;
+      -webkit-animation: pulsate 1s ease-out infinite;
+      opacity: .5;
+    }
+  }
+
+  // &:hover {
+  //   height: 2.5em;
+
+  //   &:before {
+  //     position: absolute;
+  //     content: attr(data-value)"%";
+  //     right: .25em;
+  //     color: @color-black;
+  //   }
+  // }
+}
+
+@-webkit-keyframes pulsate {
+    0% { opacity: .25; }
+    50% { opacity: .5; }
+    100% { opacity: .25; }
+}
