--- a/src/progress-bar.less
+++ b/src/progress-bar.less
@@ -12,6 +12,13 @@
 
 // Mixins
 
+// Inline-Block IE
+.inline-block {
+  display: inline-block;
+  *zoom: 1;
+  *display: inline;
+}
+
 .padding(@top: 0, @right: 0, @bottom: 0, @left: 0) {
   padding-top: @top;
   padding-right: @right;
@@ -28,50 +35,55 @@
     Progress -- Version: 0.2.1 - Compiled: #{timestamp()}
    ========================================================================== */
 
-progress[value] {
-  position: relative;
+label {
+  display: inline-block;
+  margin-bottom: .5em;
+}
+
+.progress-bar {
+  .inline-block();
   width: 100%;
-  height: 1.5em;
-  .padding(@padding / 2, 0);
-  -webkit-appearance: none;
-  appearance: none;
-  .transition(height, .5s, ease);
+  height: .5em;
+  background: @color-light-grey;
+}
 
-  &::-webkit-progress-bar {
-    background: @color-light-grey;
+.progress-bar span {
+  position: relative;
+  display: block;
+  width: attr(value);
+  height: .5em;
+  background-color: @color-primary-red;
+  text-indent: -9999px;
+
+  &:after {
+    position: absolute;
+    content: '';
+    width: .25em;
+    height: 100%;
+    right: 0;
+    background: @color-white;
+    -webkit-animation: pulsate 1s ease-out infinite;
+    -moz-animation: pulsate 1s ease-out infinite;
+    animation: pulsate 1s ease-out infinite;
+    opacity: .5;
   }
-
-  &::-webkit-progress-value {
-    position: relative;
-    background: @color-primary-red;
-    .transition(width, .5s, ease-in-out);
-
-    &:after {
-      position: absolute;
-      content: '';
-      width: .25em;
-      height: 100%;
-      right: 0;
-      background: @color-white;
-      -webkit-animation: pulsate 1s ease-out infinite;
-      opacity: .5;
-    }
-  }
-
-  // &:hover {
-  //   height: 2.5em;
-
-  //   &:before {
-  //     position: absolute;
-  //     content: attr(data-value)"%";
-  //     right: .25em;
-  //     color: @color-black;
-  //   }
-  // }
 }
 
 @-webkit-keyframes pulsate {
-    0% { opacity: .25; }
-    50% { opacity: .5; }
-    100% { opacity: .25; }
+  0% { opacity: .25; }
+  50% { opacity: .75; }
+  100% { opacity: .25; }
 }
+
+@-moz-keyframes pulsate {
+  0% { opacity: .25; }
+  50% { opacity: .75; }
+  100% { opacity: .25; }
+}
+
+@keyframes pulsate {
+  0% { opacity: .25; }
+  50% { opacity: .75; }
+  100% { opacity: .25; }
+}
+
